--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ test-vids/lecture1.mp4
 test-vids/webcam.avi
 test-vids/webcam_sender.avi
 test-vids/livestream_receiver.avi
+figures/195.png
+figures/199.png
+figures/201.png
+figures/205.png
